feat: flat skin view attributes added

--- a/app/src/main/res/layout/activity_flat_skin_view_test.xml
+++ b/app/src/main/res/layout/activity_flat_skin_view_test.xml
@@ -9,6 +9,6 @@
     <dev.storeforminecraft.skinviewandroid.library.twodimension.ui.FlatSkinView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:skin="@raw/skin_steve" />
+        app:skin="@raw/skin_steve_legacy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
