--- a/app/src/main/res/layout/activity_flat_skin_view_test.xml
+++ b/app/src/main/res/layout/activity_flat_skin_view_test.xml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FlatSkinViewTestActivity">
 
-    <dev.storeforminecraft.skinviewandroid.library.twodimension.ui.FlatSkinView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:skin="@raw/skin_steve_legacy" />
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <dev.storeforminecraft.skinviewandroid.library.twodimension.ui.FlatSkinView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:halfview="true"
+            app:scale="32" />
+
+        <dev.storeforminecraft.skinviewandroid.library.twodimension.ui.FlatSkinView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:halfview="true"
+            app:scale="16" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <dev.storeforminecraft.skinviewandroid.library.twodimension.ui.FlatSkinView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:scale="32" />
+
+        <dev.storeforminecraft.skinviewandroid.library.twodimension.ui.FlatSkinView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:scale="16" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
