feat: improved slim skin detection logic.

--- a/app/src/main/res/layout/activity_flat_skin_view_test.xml
+++ b/app/src/main/res/layout/activity_flat_skin_view_test.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:scale="32"
-            app:skin="@raw/steve" />
+            app:skin="@raw/skin" />
 
         <dev.storeforminecraft.skinviewandroid.library.twodimension.ui.FlatSkinView
             android:layout_width="wrap_content"
